k8s/applications/services/owntracks/owntracks/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-frontend
  labels:
    app: owntracks-frontend
spec:
  selector:
    matchLabels:
      app: owntracks-frontend
  template:
    metadata:
      labels:
        app: owntracks-frontend
    spec:
      containers:
      - image: owntracks/frontend:latest
        name: frontend
        resources:
          requests:
            memory: "25Mi"
            cpu: "50m"
          limits:
            memory: "30Mi"
            cpu: "75m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 30
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: usr/share/nginx/html/config/config.js
          subPath: config.js
      volumes:
        - name: config
          configMap:
            name: frontend-cfg
