k8s/applications/services/owntracks/owntracks/manifests/deployment-recorder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-recorder
  labels:
    app: owntracks-recorder
spec:
  selector:
    matchLabels:
      app: owntracks-recorder
  template:
    metadata:
      labels:
        app: owntracks-recorder
    spec:
      containers:
      - image: owntracks/recorder:latest
        name: recorder
        resources:
          requests:
            memory: "100Mi"
            cpu: "150m"
          limits:
            memory: "200Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: http
          timeoutSeconds: 1
          failureThreshold: 30
        ports:
        - containerPort: 8083
          name: http
        volumeMounts:
        - name: data
          mountPath: /store
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: owntracks
