k8s/applications/services/owntracks/owntracks/manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntracks-frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: owntracks-frontend
