k8s/applications/services/owntracks/owntracks/manifests/service-recorder.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntracks-recorder
spec:
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  selector:
    app: owntracks-recorder
