k8s/applications/services/owntracks/owntracks/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
  name: owntracks-ingress
spec:
  rules:
  - host: owntracks.theleachfamily.me.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owntracks-frontend
            port: 
              name: http
  - host: recorder.owntracks.theleachfamily.me.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owntracks-recorder
            port: 
              name: http
  tls:
  - hosts:
    - owntracks.theleachfamily.me.uk
    - recorder.owntracks.theleachfamily.me.uk
    secretName: owntracks-cert
